chore: configure eslint and prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-  }
+  },
+  "exclude": ["eslint.config.mts"]
 }
