--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "start:dev": "nodemon --watch src/ --exec ts-node src/index.ts -e ts"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-prettier": "^5.5.3",
+    "globals": "^16.3.0",
     "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.38.0"
   },
   "dependencies": {
     "express": "^5.1.0"
