--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "start:dev": "nodemon --watch src/ --exec ts-node src/index.ts -e ts"
+    "start:dev": "nodemon --watch src/ --exec ts-node src/shared/infra/http/server.ts -e ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -17,11 +16,12 @@
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
-    "tsx": "^4.20.3",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.38.0"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^5.1.0"
   }
 }
