--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript-eslint": "^8.38.0"
   },
   "dependencies": {
+    "celebrate": "^15.0.3",
     "dotenv": "^17.2.1",
     "express": "^5.1.0"
   }
