--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.ts",
   "license": "MIT",
   "scripts": {
-    "start:dev": "nodemon --watch src/ --exec ts-node src/shared/infra/http/server.ts -e ts"
+    "start:dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "start": "ts-node src/shared/infra/http/server.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -14,9 +15,8 @@
     "eslint": "^9.32.0",
     "eslint-plugin-prettier": "^5.5.3",
     "globals": "^16.3.0",
-    "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
-    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.38.0"
