--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,10 @@
       "@config/*": ["config/*"],
       "@shared/*": ["shared/*"]
     },
+
+    // For typeorm
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
   },
   "ts-node": {
       "require": ["tsconfig-paths/register"]
