feat: added users and usertokens table migrations

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start:dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "start": "ts-node src/shared/infra/http/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "migration:create": "yarn run typeorm migration:create ./src/shared/infra/typeorm/migrations/\"",
+    "migration:run": "yarn run typeorm migration:run -d ./src/shared/infra/typeorm/index.ts",
+    "migration:revert": "yarn run typeorm migration:revert -d ./src/shared/infra/typeorm/index.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
