--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
     "eslint": "^9.32.0",
     "eslint-plugin-prettier": "^5.5.3",
@@ -26,11 +28,15 @@
     "typescript-eslint": "^8.38.0"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "celebrate": "^15.0.3",
+    "class-transformer": "^0.5.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.10.0",
     "typeorm": "^0.3.25"
   }
 }
