--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "migration:create": "yarn run typeorm migration:create ./src/shared/infra/typeorm/migrations/\"",
     "migration:run": "yarn run typeorm migration:run -d ./src/shared/infra/typeorm/index.ts",
-    "migration:revert": "yarn run typeorm migration:revert -d ./src/shared/infra/typeorm/index.ts"
+    "migration:revert": "yarn run typeorm migration:revert -d ./src/shared/infra/typeorm/index.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
     "eslint": "^9.32.0",
     "eslint-plugin-prettier": "^5.5.3",
     "globals": "^16.3.0",
+    "jest": "^30.0.5",
     "prettier": "^3.6.2",
+    "ts-jest": "^29.4.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2",
@@ -31,6 +35,7 @@
     "bcryptjs": "^3.0.2",
     "celebrate": "^15.0.3",
     "class-transformer": "^0.5.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
